framework/src/main/java/aorta/parser/AORTAParser.java
// Generated from /Users/asj/Dropbox/code/phd/AORTA/Aorta/src/java/aorta/parser/AORTA.g4 by ANTLR 4.1

package aorta.parser;

import alice.tuprolog.Number;
import alice.tuprolog.Int;
import alice.tuprolog.Struct;
import alice.tuprolog.Prolog;
import alice.tuprolog.Term;
import alice.tuprolog.Theory;
import alice.tuprolog.Var;

import aorta.kr.*;
import aorta.kr.language.*;
import aorta.parser.helper.*;
import aorta.reasoning.*;
import aorta.reasoning.action.*;
import aorta.reasoning.action.act.*;
import aorta.reasoning.action.coord.*;
import aorta.reasoning.action.opt.*;
import aorta.reasoning.coordination.*;
import aorta.reasoning.fml.*;

import java.io.IOException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AORTAParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		START_BLOCK=1, END_BLOCK=2, START_BRACKET=3, END_BRACKET=4, EXECUTE=5, 
		INIT_BLOCK=6, ORGANIZATION=7, PATH=8, TYPE=9, ORGANIZATION_TYPE=10, STRATEGY=11, 
		OPT_BLOCK=12, ACT_BLOCK=13, COORDINATION_BLOCK=14, EQUALS=15, START=16, 
		END=17, COMMA=18, COLON=19, SEMICOLON=20, PLUS=21, MINUS=22, NOT=23, OPT=24, 
		BEL=25, GOAL=26, ORG=27, CONSIDER=28, DISREGARD=29, ENACT=30, DEACT=31, 
		COMMIT=32, SEND=33, SENDONCE=34, DROP=35, TRUE=36, ATOM=37, NUMBER=38, 
		VAR=39, UNARY_OP=40, BINARY_OP=41, CLASSNAME=42, FILEPATH=43, WS=44;
	public static final String[] tokenNames = {
		"<INVALID>", "'{'", "'}'", "'['", "']'", "'=>'", "'init'", "'organization'", 
		"'path'", "'type'", "ORGANIZATION_TYPE", "'strategy'", "'options'", "'actions'", 
		"'coordination'", "'='", "'('", "')'", "','", "':'", "';'", "'+'", "'-'", 
		"'~'", "'opt'", "'bel'", "'goal'", "'org'", "'consider'", "'disregard'", 
		"'enact'", "'deact'", "'commit'", "'send'", "'sendonce'", "'drop'", "'true'", 
		"ATOM", "NUMBER", "VAR", "'\\+'", "BINARY_OP", "CLASSNAME", "FILEPATH", 
		"WS"
	};
	public static final int
		RULE_aortaAgent = 0, RULE_init = 1, RULE_strategy = 2, RULE_optionRules = 3, 
		RULE_opts = 4, RULE_opt = 5, RULE_actionRules = 6, RULE_acts = 7, RULE_act = 8, 
		RULE_coordinationRules = 9, RULE_coords = 10, RULE_coord = 11, RULE_changes = 12, 
		RULE_change = 13, RULE_sendAction = 14, RULE_formulas = 15, RULE_formula = 16, 
		RULE_optAction = 17, RULE_actAction = 18, RULE_prolog = 19, RULE_prolog2 = 20, 
		RULE_termBuilder = 21, RULE_term = 22, RULE_atom = 23, RULE_number = 24, 
		RULE_var = 25, RULE_struct = 26, RULE_args = 27, RULE_list = 28, RULE_listContents = 29, 
		RULE_listItem = 30;
	public static final String[] ruleNames = {
		"aortaAgent", "init", "strategy", "optionRules", "opts", "opt", "actionRules", 
		"acts", "act", "coordinationRules", "coords", "coord", "changes", "change", 
		"sendAction", "formulas", "formula", "optAction", "actAction", "prolog", 
		"prolog2", "termBuilder", "term", "atom", "number", "var", "struct", "args", 
		"list", "listContents", "listItem"
	};

	@Override
	public String getGrammarFileName() { return "AORTA.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public AORTAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AortaAgentContext extends ParserRuleContext {
		public String name;
		public AgentBuilder agent;
		public InitContext init;
		public OptionRulesContext optionRules;
		public ActionRulesContext actionRules;
		public CoordinationRulesContext coordinationRules;
		public OptionRulesContext optionRules() {
			return getRuleContext(OptionRulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AORTAParser.EOF, 0); }
		public CoordinationRulesContext coordinationRules() {
			return getRuleContext(CoordinationRulesContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public ActionRulesContext actionRules() {
			return getRuleContext(ActionRulesContext.class,0);
		}
		public AortaAgentContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AortaAgentContext(ParserRuleContext parent, int invokingState, String name) {
			super(parent, invokingState);
			this.name = name;
		}
		@Override public int getRuleIndex() { return RULE_aortaAgent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterAortaAgent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitAortaAgent(this);
		}
	}

	public final AortaAgentContext aortaAgent(String name) throws RecognitionException {
		AortaAgentContext _localctx = new AortaAgentContext(_ctx, getState(), name);
		enterRule(_localctx, 0, RULE_aortaAgent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

				   Initialization init = new Initialization();
				   List<OptionRule> optRules = null;
				   List<ActionRule> actRules = new ArrayList<>();
				   List<CoordinationRule> coordRules = null;
				   
			setState(66);
			_la = _input.LA(1);
			if (_la==INIT_BLOCK) {
				{
				setState(63); ((AortaAgentContext)_localctx).init = init();
				init = ((AortaAgentContext)_localctx).init.initialization;
				}
			}

			setState(71);
			_la = _input.LA(1);
			if (_la==OPT_BLOCK) {
				{
				setState(68); ((AortaAgentContext)_localctx).optionRules = optionRules();
				optRules = ((AortaAgentContext)_localctx).optionRules.rules;
				}
			}

			setState(76);
			_la = _input.LA(1);
			if (_la==ACT_BLOCK) {
				{
				setState(73); ((AortaAgentContext)_localctx).actionRules = actionRules();
				actRules = ((AortaAgentContext)_localctx).actionRules.rules;
				}
			}

			setState(81);
			_la = _input.LA(1);
			if (_la==COORDINATION_BLOCK) {
				{
				setState(78); ((AortaAgentContext)_localctx).coordinationRules = coordinationRules();
				coordRules = ((AortaAgentContext)_localctx).coordinationRules.rules;
				}
			}

			setState(83); match(EOF);

				 
				 ((AortaAgentContext)_localctx).agent =  new AgentBuilder(name, init, optRules, actRules, coordRules);  
				 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public Initialization initialization;
		public StrategyContext strategy;
		public StrategyContext strategy() {
			return getRuleContext(StrategyContext.class,0);
		}
		public TerminalNode END_BLOCK() { return getToken(AORTAParser.END_BLOCK, 0); }
		public TerminalNode START_BLOCK() { return getToken(AORTAParser.START_BLOCK, 0); }
		public TerminalNode INIT_BLOCK() { return getToken(AORTAParser.INIT_BLOCK, 0); }
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			           ((InitContext)_localctx).initialization =  new Initialization(); 
			          
			setState(87); match(INIT_BLOCK);
			setState(88); match(START_BLOCK);
			setState(92);
			_la = _input.LA(1);
			if (_la==STRATEGY) {
				{
				setState(89); ((InitContext)_localctx).strategy = strategy();
				 _localctx.initialization.strategy = ((InitContext)_localctx).strategy.clazz; 
				}
			}

			setState(94); match(END_BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrategyContext extends ParserRuleContext {
		public String clazz;
		public Token CLASSNAME;
		public TerminalNode CLASSNAME() { return getToken(AORTAParser.CLASSNAME, 0); }
		public TerminalNode STRATEGY() { return getToken(AORTAParser.STRATEGY, 0); }
		public TerminalNode COLON() { return getToken(AORTAParser.COLON, 0); }
		public StrategyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterStrategy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitStrategy(this);
		}
	}

	public final StrategyContext strategy() throws RecognitionException {
		StrategyContext _localctx = new StrategyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_strategy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(STRATEGY);
			setState(97); match(COLON);
			setState(98); ((StrategyContext)_localctx).CLASSNAME = match(CLASSNAME);
			 ((StrategyContext)_localctx).clazz =  (((StrategyContext)_localctx).CLASSNAME!=null?((StrategyContext)_localctx).CLASSNAME.getText():null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionRulesContext extends ParserRuleContext {
		public List<OptionRule> rules;
		public OptsContext opts;
		public TerminalNode END_BLOCK() { return getToken(AORTAParser.END_BLOCK, 0); }
		public TerminalNode OPT_BLOCK() { return getToken(AORTAParser.OPT_BLOCK, 0); }
		public OptsContext opts() {
			return getRuleContext(OptsContext.class,0);
		}
		public TerminalNode START_BLOCK() { return getToken(AORTAParser.START_BLOCK, 0); }
		public OptionRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterOptionRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitOptionRules(this);
		}
	}

	public final OptionRulesContext optionRules() throws RecognitionException {
		OptionRulesContext _localctx = new OptionRulesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_optionRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(OPT_BLOCK);
			setState(102); match(START_BLOCK);
			setState(103); ((OptionRulesContext)_localctx).opts = opts();
			setState(104); match(END_BLOCK);
			 ((OptionRulesContext)_localctx).rules =  ((OptionRulesContext)_localctx).opts.rules; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptsContext extends ParserRuleContext {
		public List<OptionRule> rules;
		public OptContext opt;
		public OptsContext o;
		public OptContext opt() {
			return getRuleContext(OptContext.class,0);
		}
		public OptsContext opts() {
			return getRuleContext(OptsContext.class,0);
		}
		public OptsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterOpts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitOpts(this);
		}
	}

	public final OptsContext opts() throws RecognitionException {
		OptsContext _localctx = new OptsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_opts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((OptsContext)_localctx).rules =  new ArrayList<>(); 
			setState(113);
			switch (_input.LA(1)) {
			case END_BLOCK:
				{
				}
				break;
			case START_BRACKET:
				{
				setState(109); ((OptsContext)_localctx).opt = opt();
				setState(110); ((OptsContext)_localctx).o = opts();
				 _localctx.rules.add(((OptsContext)_localctx).opt.rule); _localctx.rules.addAll(((OptsContext)_localctx).o.rules); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptContext extends ParserRuleContext {
		public OptionRule rule;
		public FormulasContext formulas;
		public OptActionContext optAction;
		public TerminalNode EXECUTE() { return getToken(AORTAParser.EXECUTE, 0); }
		public FormulasContext formulas() {
			return getRuleContext(FormulasContext.class,0);
		}
		public TerminalNode START_BRACKET() { return getToken(AORTAParser.START_BRACKET, 0); }
		public TerminalNode END_BRACKET() { return getToken(AORTAParser.END_BRACKET, 0); }
		public OptActionContext optAction() {
			return getRuleContext(OptActionContext.class,0);
		}
		public OptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterOpt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitOpt(this);
		}
	}

	public final OptContext opt() throws RecognitionException {
		OptContext _localctx = new OptContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_opt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(START_BRACKET);
			setState(116); ((OptContext)_localctx).formulas = formulas();
			setState(117); match(END_BRACKET);
			setState(118); match(EXECUTE);
			setState(119); ((OptContext)_localctx).optAction = optAction();
			 ((OptContext)_localctx).rule =  new OptionRule(((OptContext)_localctx).formulas.fml, ((OptContext)_localctx).optAction.oa); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionRulesContext extends ParserRuleContext {
		public List<ActionRule> rules;
		public ActsContext acts;
		public TerminalNode ACT_BLOCK() { return getToken(AORTAParser.ACT_BLOCK, 0); }
		public TerminalNode END_BLOCK() { return getToken(AORTAParser.END_BLOCK, 0); }
		public TerminalNode START_BLOCK() { return getToken(AORTAParser.START_BLOCK, 0); }
		public ActsContext acts() {
			return getRuleContext(ActsContext.class,0);
		}
		public ActionRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterActionRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitActionRules(this);
		}
	}

	public final ActionRulesContext actionRules() throws RecognitionException {
		ActionRulesContext _localctx = new ActionRulesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_actionRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(ACT_BLOCK);
			setState(123); match(START_BLOCK);
			setState(124); ((ActionRulesContext)_localctx).acts = acts();
			setState(125); match(END_BLOCK);
			 ((ActionRulesContext)_localctx).rules =  ((ActionRulesContext)_localctx).acts.rules; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActsContext extends ParserRuleContext {
		public List<ActionRule> rules;
		public ActContext act;
		public ActsContext a;
		public ActsContext acts() {
			return getRuleContext(ActsContext.class,0);
		}
		public ActContext act() {
			return getRuleContext(ActContext.class,0);
		}
		public ActsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterActs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitActs(this);
		}
	}

	public final ActsContext acts() throws RecognitionException {
		ActsContext _localctx = new ActsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_acts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ActsContext)_localctx).rules =  new ArrayList<>(); 
			setState(136);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(129); ((ActsContext)_localctx).act = act();
				 _localctx.rules.add(((ActsContext)_localctx).act.rule); 
				}
				break;

			case 2:
				{
				setState(132); ((ActsContext)_localctx).act = act();
				setState(133); ((ActsContext)_localctx).a = acts();
				 _localctx.rules.add(((ActsContext)_localctx).act.rule); _localctx.rules.addAll(((ActsContext)_localctx).a.rules); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActContext extends ParserRuleContext {
		public ActionRule rule;
		public FormulasContext formulas;
		public ActActionContext actAction;
		public TerminalNode EXECUTE() { return getToken(AORTAParser.EXECUTE, 0); }
		public ActActionContext actAction() {
			return getRuleContext(ActActionContext.class,0);
		}
		public FormulasContext formulas() {
			return getRuleContext(FormulasContext.class,0);
		}
		public TerminalNode START_BRACKET() { return getToken(AORTAParser.START_BRACKET, 0); }
		public TerminalNode END_BRACKET() { return getToken(AORTAParser.END_BRACKET, 0); }
		public ActContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterAct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitAct(this);
		}
	}

	public final ActContext act() throws RecognitionException {
		ActContext _localctx = new ActContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_act);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(START_BRACKET);
			setState(139); ((ActContext)_localctx).formulas = formulas();
			setState(140); match(END_BRACKET);
			setState(141); match(EXECUTE);
			setState(142); ((ActContext)_localctx).actAction = actAction();
			 ((ActContext)_localctx).rule =  new ActionRule(((ActContext)_localctx).formulas.fml, ((ActContext)_localctx).actAction.aa); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoordinationRulesContext extends ParserRuleContext {
		public List<CoordinationRule> rules;
		public CoordsContext coords;
		public TerminalNode COORDINATION_BLOCK() { return getToken(AORTAParser.COORDINATION_BLOCK, 0); }
		public TerminalNode END_BLOCK() { return getToken(AORTAParser.END_BLOCK, 0); }
		public TerminalNode START_BLOCK() { return getToken(AORTAParser.START_BLOCK, 0); }
		public CoordsContext coords() {
			return getRuleContext(CoordsContext.class,0);
		}
		public CoordinationRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coordinationRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterCoordinationRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitCoordinationRules(this);
		}
	}

	public final CoordinationRulesContext coordinationRules() throws RecognitionException {
		CoordinationRulesContext _localctx = new CoordinationRulesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_coordinationRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(COORDINATION_BLOCK);
			setState(146); match(START_BLOCK);
			setState(147); ((CoordinationRulesContext)_localctx).coords = coords();
			setState(148); match(END_BLOCK);
			 ((CoordinationRulesContext)_localctx).rules =  ((CoordinationRulesContext)_localctx).coords.rules; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoordsContext extends ParserRuleContext {
		public List<CoordinationRule> rules;
		public CoordContext coord;
		public CoordsContext c;
		public CoordContext coord() {
			return getRuleContext(CoordContext.class,0);
		}
		public CoordsContext coords() {
			return getRuleContext(CoordsContext.class,0);
		}
		public CoordsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coords; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterCoords(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitCoords(this);
		}
	}
